<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="shoeItemData"
            type="com.ss.shoestore.models.ShoeModel" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:padding="8dp"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/image"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:src="@drawable/shoe"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/shoe_image" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/name"
                android:layout_width="0dp"
                android:layout_height="15dp"
                android:layout_margin="8dp"
                android:hint="@string/name"
                android:text="@{shoeItemData.name}"
                android:textColor="@color/primary"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/image"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/description"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:hint="@string/description"
                android:layout_margin="8dp"
                android:text="@{shoeItemData.description}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/image"
                app:layout_constraintTop_toBottomOf="@+id/name" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</layout>