<?xml version="1.0" encoding="utf-8"?>
<!--
    Login screen needs to arrange views constraining to another views, so it's better to use
    ConstraintLayout to have a flatten view tree to faster draws and reduce memory usage.

    also im using ScrollView because product information could change
    dynamically then getting bigger forcing the user to scroll the screen.
-->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".shoedetails.ShoeDetailsFragment">

    <data>
        <variable
            name="shoeDetailsViewModel"
            type="com.ss.shoestore.viewmodel.ShoesViewModel" />

        <variable
            name="shoeItemData"
            type="com.ss.shoestore.models.ShoeModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:boxStrokeColor="@color/primary"
            app:errorEnabled="true"
            app:hintTextColor="@color/primary_light"
            app:layout_constraintBottom_toTopOf="@+id/company"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintVertical_chainStyle="packed">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/shoe_name"
                android:inputType="text"
                android:minHeight="58dp"
                android:text="@={shoeItemData.name}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/company"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:boxStrokeColor="@color/primary"
            app:errorEnabled="true"
            app:hintTextColor="@color/primary_light"
            app:layout_constraintTop_toBottomOf="@+id/name"
            tools:layout_editor_absoluteX="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/company_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/shoe_company"
                android:inputType="text"
                android:maxLength="10"
                android:minHeight="58dp"
                android:text="@={shoeItemData.company}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/size"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:boxStrokeColor="@color/primary"
            app:errorEnabled="true"
            app:hintTextColor="@color/primary_light"
            app:layout_constraintTop_toBottomOf="@+id/company">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/size_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/shoe_size"
                android:inputType="number"
                android:minHeight="58dp"
                android:text="@={shoeItemData.size}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/description"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:boxStrokeColor="@color/primary"
            app:errorEnabled="true"
            app:hintTextColor="@color/primary_light"
            app:layout_constraintTop_toBottomOf="@+id/size"
            tools:layout_editor_absoluteX="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/description_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/show_description"
                android:inputType="text"
                android:maxLength="10"
                android:minHeight="58dp"
                android:text="@={shoeItemData.description}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:onClick="@{() -> shoeDetailsViewModel.addNewShow(shoeItemData.name, shoeItemData.size, shoeItemData.company, shoeItemData.description)}"
            android:text="@string/add_shoe"
            app:layout_constraintEnd_toStartOf="@+id/cancel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/add"
            app:layout_constraintTop_toBottomOf="@+id/description" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>